[workspace.package]
version = "0.20.1"
edition = "2021"


[workspace]
members = [
    "landscape",
    "landscape-common",
    "landscape-database",
    "landscape-gateway",
    "landscape-macro",
    "landscape-database/migration",
    "landscape-dns",
    "landscape-ebpf",
    "landscape-protobuf",
    "landscape-webserver",
]

resolver = "2"
default-members = ["landscape-webserver"]


[workspace.dependencies]

# ============================================================================
# Core & System Utilities
# ============================================================================
sysinfo = "0.39.3"
anyhow = "1.0.100"
thiserror = "2.0.18"
once_cell = "1.21.4"
chrono = "0.4.45"
arc-swap = "1.9.1"
regex = "1.12.4"
libc = "0.2.186"
nix = { version = "0.31.3" }
sysctl = "0.7.1"
homedir = "0.3.6"
hostname = "0.4.2"
socket2 = "0.6.4"
paste = "1.0.15"
rand = "0.10.1"
colored = "3.0.0"
dotenvy = "0.15.7"
uuid = { version = "1.23.3", features = ["v4", "serde"] }
clap = { version = "4.6.1", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
    "env",
] }

# ============================================================================
# Async & Concurrency
# ============================================================================
tokio = { version = "1.52.3" }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.17", features = ["codec", "net"] }
tokio-rustls = "0.26.4"
async-trait = "0.1.89"
async-std = { version = "1", features = ["attributes", "tokio1"] }
futures = "0.3.11"
futures-util = { version = "0.3", default-features = false }

# ============================================================================
# Serialization & Data Formats
# ============================================================================
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150" }
bincode = { version = "2.0.1", features = ["std", "serde"] }
toml = "1.1.2"
toml_edit = "0.25.12"
bytes = "1.12.0"
http = "1.4.2"
h2 = "0.4.15"
deku = "0.20.3"
zerocopy = "0.8.52"
plain = "0.2"

# ============================================================================
# Network & Protocols
# ============================================================================
rtnetlink = { version = "0.21.0" }
netlink-packet-route = { version = "0.30.0" }
netlink-packet-core = { version = "0.8" }
netlink-sys = { version = "0.8" }
wl-nl80211 = { version = "0.4" }
genetlink = { version = "0.2" }
netlink-packet-generic = { version = "0.4" }
pnet = { version = "0.35.0" }
etherparse = "0.20.2"
cidr = { version = "0.3.2" }
idna = "1.0.3"
dhcproto = "0.15.0"
reqwest = { version = "0.13.4", default-features = false, features = [
    "rustls",
] }
hickory-server = "0.26.1"
hickory-client = "0.25.2"
hickory-resolver = "0.26.1"
hickory-proto = "0.26.1"
quinn = { version = "0.11.2", features = ["runtime-tokio"] }
trie-rs = "0.4.2"
aho-corasick = "1.1.3"
moka = { version = "0.12.15", features = ["future"] }
zbus = "5.16.0"

# ============================================================================
# Web & HTTP
# ============================================================================
axum = { version = "0.8.9", features = ["ws", "multipart"] }
axum-extra = { version = "0.12.6", features = [
    "typed-header",
    "with-rejection",
] }
axum-server = "0.8.0"
headers = "0.4"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.7.0", features = ["fs", "trace"] }
utoipa = { version = "5.5.0", features = ["uuid", "openapi_extensions"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }

# ============================================================================
# Security & Cryptography
# ============================================================================
rustls = { version = "0.23.40", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }
rustls-pki-types = "1.14.1"
pem = "3.0"
rcgen = "0.14.8"
instant-acme = "0.8.5"
base64 = "0.22"
x509-parser = "0.18.1"
sha2 = "0.11.0"
hmac = "0.13.0"
md-5 = "0.11.0"
sha1 = "0.11.0"
quick-xml = { version = "0.40.1", features = ["serialize"] }

# ============================================================================
# Database & Storage
# ============================================================================
sea-orm = { version = "1.1.20" }
sea-orm-migration = { version = "1.1.20" }
duckdb = { version = "1.4.4", features = ["r2d2", "chrono"] }
r2d2 = "0.8.10"
fs2 = "0.4.3"

# ============================================================================
# Logging & Monitoring
# ============================================================================
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"

# ============================================================================
# eBPF & Kernel
# ============================================================================
libbpf-rs = { version = "0.26.2" }
libbpf-cargo = { version = "0.26.2" }
libbpf-sys = { version = "1.6.4" }

# ============================================================================
# Code Generation & Macros
# ============================================================================
quote = "1.0.37"
syn = "2.0.118"
quick-protobuf = "0.8.1"

# ============================================================================
# Development & Build Tools
# ============================================================================
pb-rs = "0.10.0"
walkdir = "2"
tempfile = "3.27.0"
jemallocator = "0.5"
jemalloc-ctl = "0.5"
bollard = "0.21.0"
portable-pty = { version = "0.9.0" }
pingora = { version = "0.8.1", default-features = false, features = [
    "proxy",
    "lb",
    "rustls",
] }
