[package]
name = "landscape-common"
version.workspace = true
edition.workspace = true

[dependencies]
landscape-macro = { path = "../landscape-macro" }

anyhow = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
once_cell = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
arc-swap = { workspace = true }

tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
bytes = { workspace = true }
homedir = { workspace = true }
hostname = { workspace = true }
dotenvy = { workspace = true }

tracing = { workspace = true }

uuid = { workspace = true }

libc = { workspace = true }
idna = { workspace = true }

paste = { workspace = true }
deku = { workspace = true }

dhcproto = { workspace = true, features = ["serde"] }
hickory-proto = { workspace = true }
sea-orm = { workspace = true, features = ["with-uuid", "with-json"] }
async-trait = { workspace = true }


toml = { workspace = true }

sysctl = { workspace = true }
md-5 = { workspace = true }

utoipa = { workspace = true, optional = true }

[features]
openapi = ["utoipa"]

[dev-dependencies]
tempfile = { workspace = true }
