[package]
name = "landscape-dns"
version.workspace = true
edition.workspace = true

[dependencies]
landscape-ebpf = { path = "../landscape-ebpf" }
landscape-common = { path = "../landscape-common" }
landscape-protobuf = { path = "../landscape-protobuf" }

hickory-server = { workspace = true, features = ["https-ring"] }
hickory-client = { workspace = true }
hickory-resolver = { workspace = true, features = [
    "system-config",
    "__tls",
    "__https",
    "quic-ring",
    "rustls-platform-verifier",
] }
hickory-proto = { workspace = true, features = [
    "mdns",
] }

uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
socket2 = { workspace = true }
arc-swap = { workspace = true }

tokio-util = { workspace = true, features = ["codec", "net"] }
tokio = { workspace = true, features = ['fs', 'net'] }
clap = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
async-trait = { workspace = true }
trie-rs = { workspace = true }
aho-corasick = { workspace = true }
regex = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
futures-util = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
h2 = { workspace = true }
base64 = { workspace = true }

nix = { workspace = true, features = ["socket", "uio", "net"] }
moka = { workspace = true }


[dev-dependencies]
homedir = { workspace = true }
jemallocator = { workspace = true }
jemalloc-ctl = { workspace = true }
